<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MADA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 올원뱅크 진입 화면 -->
    <string name="all_one_mada">내 다이어리</string>
    <string name="all_one_mada_no_challenge">시작된 챌린지가 없어요</string>
    <string name="all_one_mada_challenge">머니 다이어리</string>
    <string name="all_one_mada_no_account">아직 연결된 통장이 없어요</string>
    <string name="all_one_mada_account_possible_money">오늘 쓸 수 있는 돈</string>
    <string name="all_one_mada_account_over_money">예산을 초과했어요 🥲</string>
    <string name="all_one_mada_need_budget">예산을 설정해 주세요 😃</string>
    <string name="all_one_mada_need_card">카드를 개설해 주세요 😃</string>
    <string name="all_one_mada_diary_home">다이어리 홈</string>

    <!-- 온보딩 -->
    <string name="on_boarding_next">좋아!</string>
    <string name="on_boarding_alle">올리</string>
    <string name="on_boarding_step_one">안녕 모아! 나는 올리야.\n나는 집을 지으려고 하는데 너의 도움이 필요해</string>
    <string name="on_boarding_step_two">여기 있는 이 마법의\n머니 다이어리를 잘 채워준다면\n내가 집을 지을 수 있는 재료들이 생길거야!</string>
    <string name="on_boarding_step_three">재료를 얻는 방법을 알려줄게</string>
    <string name="on_boarding_step_four">첫 번째,\n한 주 간 쓸 돈을 요일별로 계획해줘\n계획이 어려울 땐 AI올리가 도와줄거야!</string>
    <string name="on_boarding_step_five">두 번째,\n매일 내가 보내주는\n알림을 확인하며 계획 한 만큼만 소비해!</string>
    <string name="on_boarding_step_six">세 번째,\n일요일 저녁 정해진 시간에 쓰고 남은 돈을\n확인하고 저축 다이어리에 저축해!</string>
    <string name="on_boarding_step_seven">네 번째,\n하루 한 번 내가 만들고 있는 집과 예산을\n확인하면 보너스 점수!</string>
    <string name="on_boarding_step_eight">머니 다이어리를 시작하려면\n계좌 연동이 필요해 연동 하러 갈까?</string>
    <string name="on_boarding_navigate_home">우선 둘러 볼게</string>

    <!-- 계좌 연동 -->
    <string name="account_link_choose_account">머니다이어리에\n연결할 통장을 선택해 주세요</string>
    <string name="account_link_choose_account_comment">작은 습관이 쌓여\n더 건강한 지출 패턴을 만들어요.</string>
    <string name="account_link_navigate_account">+ 새로운 통장 만들기</string>
    <string name="account_link_possible_account">머니다이어리 통장으로 변경 가능한 통장</string>
    <string name="account_link_possible_account_count">1</string>
    <string name="account_link_account">연동 가능한 계좌 개설</string>
    <string name="account_link_account_comment">선택한 계좌로 연동할까요?</string>

    <!-- 계좌 개설 -->
    <string name="create_account">입출금</string>
    <string name="create_account_money_diary">머니다이어리통장</string>
    <string name="create_account_money_diary_comment">작은 습관이 쌓여\n더 건강한 지출 패턴을 만들어요.</string>
    <string name="create_account_money_diary_product_title">상품특징</string>
    <string name="create_account_money_diary_product_title_content">건강한 소비습관을 도와주는 머니다이어리\n전용 상품</string>
    <string name="create_account_comment">머니다이어리통장을 개설하시겠습니까?</string>

    <!-- 카드 개설 -->
    <string name="card_title">카드상세</string>
    <string name="card_move_comment">NHPay 앱으로 이동하고 있어요!</string>
    <string name="card_create">카드 신청</string>
    <string name="card_create_comment">머니다이어리 체크카드를 신청하시겠습니까?</string>

    <!--홈 화면 -->
    <string name="money_diary">머니 다이어리</string>
    <string name="money_diary_build_comment_initial">계좌를 개설해 주세요 🥲</string>
    <string name="home_create_account">계좌 개설</string>
    <string name="home_create_account_link">계좌 연동 알림</string>
    <string name="home_recommend_create_account">머니 다이어리 계좌 연동 후 사용 할  수 있어요.\n계좌 연동으로 이동할까요?</string>
    <string name="money_diary_build_comment">n주째 집 짓는중</string>
    <string name="money_diary_build_comment_before_challenge">한 주 챌린지 완료 후 열려요</string>
    <string name="home_today_left_title">오늘 쓸 수 있는 돈</string>
    <string name="home_today_budget">오늘 예산</string>
    <string name="home_week_left_title">이번주 남는 돈</string>
    <string name="home_save_available">예산 저축은 이번주 일요일에 가능 합니다 😃</string>
    <string name="home_set_budget">예산 설정</string>
    <string name="home_set_budget_comment">예산이 설정되지 않았어요.\n에산 설정 화면으로 이동하시겠습니까?</string>


    <!-- 집 공유 -->
    <string name="home_share">집 상세</string>
    <string name="home_share_image">모아하우스 공유</string>
    <string name="home_share_image_comment">나의 모아하우스를 공유하시겠습니까?</string>
    <string name="home_save_image">나의 모아하우스 저장</string>
    <string name="home_save_image_comment">나의 모아하우스를 저장하시겠습니까?</string>
    <string name="home_save_image_complete">나의 모아하우스를 갤러리에 저장했습니다!</string>

    <!-- 집 공유 -->
    <string name="home_detail">모아하우스</string>

    <!-- 주간 예산 설정 -->
    <string name="week_budget_title">예산 설정</string>
    <string name="week_budget_my_data_commnet">미이데이터 자산 정보를 불러오고 있어요!</string>
    <string name="week_budget_hint">금액을 입력해 주세요.</string>
    <string name="week_budget_comment">지난주 사용 금액을 기반으로 이번주 예산을 설정했어요!</string>
    <string name="week_budget_comment2">캘린더 일정을 기반으로 이번주 예산을 설정했어요!</string>
    <string name="week_budget_calendar_toggle">캘린더 연동</string>
    <string name="week_budget_calendar_monday">월</string>
    <string name="week_budget_calendar_tuesday">화</string>
    <string name="week_budget_calendar_wednesday">수</string>
    <string name="week_budget_calendar_thursday">목</string>
    <string name="week_budget_calendar_friday">금</string>
    <string name="week_budget_calendar_saturday">토</string>
    <string name="week_budget_calendar_sunday">일</string>
    <string name="week_budget_calendar_friday_comment">식사 + 교통비가 예상되는 일정이에요</string>
    <string name="week_budget_calendar_saturday_comment">카페 + 교통비가 예상되는 일정이에요</string>
    <string name="week_budget_calendar_sunday_comment">쇼핑 지출이 예상되는 일정이에요</string>

    <!-- 바인더 목록 -->
    <string name="binder_list">바인더 목록</string>
    <string name="binder_list_week_binder">주간 예산 바인더</string>
    <string name="binder_list_save_binder">저축 바인더</string>
    <string name="binder_list_navigate_budget">예산 설정 하기</string>
    <string name="binder_list_navigate_budget_comment">예산을 설정해 주세요.\n예산 설정 화면으로 이동하시겠습니까?</string>
    <string name="binder_list_set_image">바인더 선택</string>
    <string name="binder_list_set_image_comment">선택하신 바인더로 변경할까요?</string>
    <string name="binder_list_select_theme">바인더 테마 선택</string>

    <!-- 예산 바인더 상세-->
    <string name="binder_budget">이번주 예산 바인더</string>
    <string name="binder_budget_monday">월요일</string>
    <string name="budget">오늘 예산</string>
    <string name="expenditure">오늘 지출</string>
    <string name="binder_budget_create_binder_save">저축 바인더 생성</string>
    <string name="binder_budget_create_binder_save_comment">저축 바인더가 생성되지 않았어요.\n저축 바인더 생성 화면으로 이동하시겠습니까?</string>
    <string name="binder_budget_create_binder_create_binder">저축 바인더 생성</string>
    <string name="binder_budget_create_binder_create_binder_comment">해당 정보로 저축 바인더를 생성하시겠습니까?</string>

    <!-- 저축 바인더 생성 -->
    <string name="create_binder_save">저축 바인더 만들기</string>
    <string name="create_binder_save_product">NH올원머니다이어리 적금</string>
    <string name="create_binder_save_name_hint">바인더 이름(목표명)을 입력해 주세요</string>
    <string name="create_binder_save_amount">저축 금액</string>
    <string name="create_binder_save_target_amount">목표 금액</string>
    <string name="create_binder_save_target_amount_hint">목표 금액을 입력해 주세요</string>
    <string name="create_binder_save_target_won">원</string>
    <string name="create_binder_save_target_period">적금기간</string>
    <string name="create_binder_save_target_period_hint">12개월</string>

    <!-- 저축 바인더 상세 -->
    <string name="binder_save">저축 바인더</string>
    <string name="binder_save_save_money">저축한 금액</string>
    <string name="binder_save_save_money_history">저축 이력</string>
    <string name="binder_save_save_money_no_history">아직 저축을 하지 않았어요!</string>

    <!-- 이번주 저축 가능한 금액-->
    <string name="week_saving">저축하기</string>
    <string name="week_saving_navigate">저축하러 가기</string>
    <string name="week_saving_week_money">이번주 저금할 돈</string>

    <!-- 이번주 남는 돈 저축하기 -->
    <string name="money_left">이번주 남는 돈</string>
    <string name="money_left_monday">월</string>
    <string name="money_left_tuesday">화</string>
    <string name="money_left_wednesday">수</string>
    <string name="money_left_thursday">목</string>
    <string name="money_left_friday">금</string>
    <string name="money_left_saturday">토</string>
    <string name="money_left_sunday">일</string>
    <string name="money_left_save">이번주 남는 돈 저축하기</string>
    <string name="money_left_save_comment">이번주 남는 돈을 저축하시겠습니까?</string>

    <!-- 버튼 -->
    <string name="setting">설정하기</string>
    <string name="next">다음</string>
    <string name="ok">확인</string>
    <string name="cancel">닫기</string>
    <string name="sign_up">가입하기</string>
    <string name="create_card">카드 만들기</string>


</resources>