<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.mada.feature.account_link.AccountLinkViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".feature.account_link.AccountLinkFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_account_link"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back"
            app:titleCentered="true"
            app:titleTextAppearance="@style/ToolbarTitleText"
            app:titleTextColor="@color/black" />

        <TextView
            android:id="@+id/tv_account_link_choose_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/pretendard_semibold"
            android:text="@string/account_link_choose_account"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_account_link" />

        <TextView
            android:id="@+id/tv_account_link_choose_account_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/account_link_choose_account_comment"
            android:textColor="#767676"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_account_link_choose_account"
            app:layout_constraintTop_toBottomOf="@id/tv_account_link_choose_account" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_navigate_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/pretendard_regular"
            android:paddingVertical="14dp"
            android:text="@string/account_link_navigate_account"
            android:textColor="@color/nh_green"
            android:textSize="18sp"
            app:cornerRadius="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_account_link_choose_account_comment"
            app:layout_constraintVertical_bias="0"
            app:onClick="@{() -> vm.navigateAccountFragment()}"
            app:strokeColor="@color/nh_green"
            app:strokeWidth="1dp" />


        <TextView
            android:id="@+id/tv_account_link_possible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/pretendard_semibold"
            android:text="@string/account_link_possible_account"
            android:textColor="#6B6B6B"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_navigate_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/pretendard_semibold"
            android:text="@string/account_link_possible_account_count"
            android:textColor="@color/nh_green"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/tv_account_link_possible"
            app:layout_constraintTop_toTopOf="@id/tv_account_link_possible" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_account_link_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:onClick="@{() -> vm.showCreateAccountLinkAlert()}"
            android:src="@drawable/acccount_link"
            app:layout_constraintTop_toBottomOf="@id/tv_account_link_possible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>