<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.mada.feature.binder_save.BinderSaveViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".feature.binder_save.BinderSaveFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_binder_save"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/binder_save"
            app:titleCentered="true"
            app:titleTextAppearance="@style/ToolbarTitleText"
            app:titleTextColor="@color/black" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_binder_save_diary"
            android:layout_width="wrap_content"
            android:layout_height="176dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_binder_save" />

        <TextView
            android:id="@+id/tv_binder_save_target_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/pretendard_semibold"
            android:text="@{vm.state.targetName}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_binder_save_diary" />

        <TextView
            android:id="@+id/tv_binder_save_target_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/create_binder_save_product"
            android:textColor="@color/home_initial_comment"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_binder_save_target_name" />

        <TextView
            android:id="@+id/tv_binder_save_amount_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/pretendard_regular"
            android:text="@string/create_binder_save_amount"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_binder_save_target_product" />

        <TextView
            android:id="@+id/tv_binder_save_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/pretendard_semibold"
            android:text="@{vm.state.saveMoney}"
            android:textColor="@color/nh_green"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/tv_binder_save_amount_title"
            app:layout_constraintTop_toBottomOf="@id/tv_binder_save_amount_title" />

        <TextView
            android:id="@+id/tv_binder_save_target_amount_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/pretendard_regular"
            android:text="@string/create_binder_save_target_amount"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_binder_save_amount_title" />

        <TextView
            android:id="@+id/tv_binder_save_target_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/pretendard_semibold"
            android:text="@{vm.state.targetAmount}"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/tv_binder_save_target_amount_title"
            app:layout_constraintTop_toBottomOf="@id/tv_binder_save_target_amount_title" />

        <ProgressBar
            android:id="@+id/progress_binder_save"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:indeterminateTint="@color/home_initial_comment"
            android:max="100"
            android:progress="@{vm.state.budgetProgress}"
            android:progressDrawable="@drawable/progress_home"
            app:layout_constraintTop_toBottomOf="@id/tv_binder_save_amount" />

        <TextView
            android:id="@+id/tv_binder_save_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@{vm.state.saveWeek}"
            android:textColor="@color/unselected_dot"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tv_binder_save_amount_title"
            app:layout_constraintTop_toBottomOf="@id/progress_binder_save" />

        <TextView
            android:id="@+id/tv_binder_save_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/pretendard_semibold"
            android:text="@{vm.state.budgetProgressText}"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/progress_binder_save"
            app:layout_constraintStart_toStartOf="@id/progress_binder_save"
            app:layout_constraintTop_toBottomOf="@id/progress_binder_save" />

        <TextView
            android:id="@+id/tv_binder_save_target_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_medium"
            android:text="@{vm.state.targetPeriod}"
            android:textColor="@color/unselected_dot"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/tv_binder_save_target_amount_title"
            app:layout_constraintTop_toTopOf="@id/tv_binder_save_week" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:background="#F6FAFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_binder_save_progress">

            <TextView
                android:id="@+id/tv_binder_save_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:elevation="10dp"
                android:fontFamily="@font/pretendard_semibold"
                android:text="@string/binder_save_save_money_history"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_binder_save_history_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:visibility="invisible"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/binder_save_save_money_no_history"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/tv_binder_save_history"
                app:layout_constraintTop_toBottomOf="@id/tv_binder_save_history" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_binder_save"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="26dp"
                android:layout_height="0dp"
                android:layout_marginTop="14dp"
                android:background="#F6FAFF"
                app:saveList="@{vm.state.saveHistoryList}"
                app:layout_constraintVertical_bias="0"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_binder_save_history"
                app:layout_constraintBottom_toBottomOf="parent"
                app:spanCount="3"
                tools:listitem="@layout/item_save" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>